complet blog Section

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body>
   
     <nav class="navbar navbar-expand-lg navbar-dark" style="background:rgba(86, 46, 255, 1);">
-      <div class="container">
-      <div class="container-fluid d-flex">
+      <div class=" container container-fluid">
         <a class="navbar-brand fs-3" href="#"><img class="p-1" src="assets/images/icons/logo.png" alt=""> Idea</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon justify-content-end"></span>
+          <p class="navbar-toggler-icon"></p>
         </button>
         <div class="collapse navbar-collapse justify-content-end fs-5" id="navbarNav">
           <ul class="navbar-nav">
@@ -23,19 +22,85 @@
               <a class="pt-3 nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="pt-3 nav-link" href="#">Features</a>
+              <a class="pt-3 nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="pt-3 nav-link" href="#">Pricing</a>
+              <a class="pt-3 nav-link" href="#">Works</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"><img src="assets/images/icons/profile.png" alt=""></a>
             </li>
           </ul>
         </div>
-      </div>
     </div>
     </nav>
+    <div class="container mt-3">
+      <div class="top-player">
+      <h3 class="fs-1">Top Player</h3>
+      <div class="row d-flex justify-content-between">
+        <div class="col-sm-6 col-md-4 player d-flex align-items-center p-3">
+          <img src="assets/images/players/player-1.png" alt="">
+          <p>John Smith</p>
+        </div>
+        <div class="col-sm-6 col-md-4 player d-flex align-items-center p-3">
+          <img src="assets/images/players/player-2.png" alt="">
+          <p>Pro Rasel</p>
+        </div>
+        <div class="col-sm-6 col-md-4 player d-flex align-items-center p-3">
+          <img src="assets/images/players/player-3.png" alt="">
+          <p>Abu Sufian</p>
+        </div>
+        <div class="col-sm-6 col-md-4 player d-flex align-items-center p-3">
+          <img src="assets/images/players/player-4.png" alt="">
+          <p>Shajedul Karim</p>
+        </div>
+        <div class="col-sm-6 col-md-4 player d-flex align-items-center p-3">
+          <img src="assets/images/players/player-5.png" alt="">
+          <p>Maruf Ahmed</p>
+        </div>
+        <div class="col-sm-6 col-md-4 player d-flex align-items-center p-3">
+          <img src="assets/images/players/player-6.png" alt="">
+          <p style=" display: block">Mujahid</p>
+        </div>
+        </div>
+  <div class="line p-4 m-3">
+  <div class="box h-100 w-75"></div>
+</div>
+<div class="top-blog">
+  <h3 class="fs-1">Top Blog</h3>
+  <div class="row">
+    <div class="col-md-6 d-flex p-3">
+      <img src="assets/images/blogs/blog-1.png" alt="">
+      <div class="box p-2"> <h4 class="fs-2 pb-4">13 of My Favorite
+        UI/UX Goodies</h4>
+      <span class="text-mute">By </span><span class="text-primary">Danny Sapio</span></div>
+     
+    </div>
+    <div class="col-md-6 d-flex p-3">
+      <img src="assets/images/blogs/blog-2.png" alt="">
+      <div class="box p-2">
+      <h4 class="fs-2 pb-4">UI cheat sheet: 
+        list vs grids</h4>
+      <span>By </span><span class="text-primary">Tess Gadd</span></div>
+    </div>
+    <div class="col-md-6 d-flex p-3">
+      <img src="assets/images/blogs/blog-3.png" alt="">
+      <div class="box p-2">
+      <h4 class="fs-2 pb-4">7 typography tips 
+        for interface design</h4>
+      <span>By </span><span class="text-primary">Jeremiah Lam</span></div>
+    </div>
+    <div class="col-md-6 d-flex p-3">
+      <img src="assets/images/blogs/blog-4.png" alt="">
+      <div class="box p-2">
+      <h4 class="fs-2 pb-4">Your logo is 
+        copied</h4>
+      <span>By </span><span class="text-primary">Ferdinand Vogler</span></div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
   
   
   <script type="text/javascript" src="assets/js/bootstrap/bootstrap.min.js"></script>
