complet the website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leader-Board</title>
+  <link rel="stylesheet" href="assets/css/fontawesome/all.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -99,6 +100,44 @@
     </div>
   </div>
 </div>
+</div>
+<div class="lates-course mt-5">
+  <h3 class="fs-1 mb-4">Lates Course</h3>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="assets/images/courses/course-1.png" class="card-img-top" alt="course-1">
+        <div class="card-body">
+          <h5 class="card-title fs-3 lh-base">React - The Complete Guide 2020</h5>
+          <p class="card-text text-danger">Reed Krakoff.</p>
+          <span class="text-muted"><img class="pe-2" src="assets/images/courses/stars.png" alt="stars"> 4.5</span>
+          <span class="hour"><i class="fa-regular fa-clock pe-3"></i>01:30 hr</span>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="assets/images/courses/course-2.png" class="card-img-top" alt="course-2">
+        <div class="card-body">
+          <h5 class="card-title fs-3 lh-base">Powerpoint 2020 Master Powerpoint</h5>
+          <p class="card-text text-danger">Walter Scott</p>
+          <span class="text-muted"><img class="pe-2" src="assets/images/courses/stars.png" alt="stars"> 4.5</span>
+          <span class="hour"><i class="fa-regular fa-clock pe-3"></i>01:30 hr</span>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="assets/images/courses/course-3.png" class="card-img-top" alt="course-2">
+        <div class="card-body">
+          <h5 class="card-title fs-3 lh-base">The Complete JavaScript Course 2020</h5>
+          <p class="card-text text-danger">Walter Scott</p>
+          <span class="text-muted"><img class="pe-2" src="assets/images/courses/stars.png" alt="stars"> 4.5</span>
+          <span class="hour"><i class="fa-regular fa-clock pe-3"></i>01:30 hr</span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
   
