--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
     </div>
   </div>
 </div>
+<footer class="text-center pt-5">
+  <p>All Right Reseved © Rahat Hossain</p>
+</footer>
 </div>
   
   
